Disable redraw lock when using DirectComposition.

This can cause windows to flicker black when they're made invisible. It
should also be unnecessary, as WS_CLIPCHILDREN should prevent
DefWindowProc from modifying window contents in the area where Chrome is
rendering.

BUG=667731

Review-Url: https://codereview.chromium.org/2536983002
Cr-Commit-Position: refs/heads/master@{#435203}

Former-commit-id: b31f7c090c114097fc46ca120a3d0d221a238e88